# Glfw

./: .gitmodules  README.md  download_resources.bat  download_resources.sh  meson_all.bat  meson_all.sh
Glfw/: Glfw.sln
Glfw/Glfw/: Glfw.vcxproj  Glfw.vcxproj.filters  Glfw.vert  Main.cpp  glsl_clean.bat  glsl_compile.bat  glsl_compile.sh  meson.build  meson_options.txt  meson_setup.bat  meson_setup.sh
Glfw/LookingGlass/: LookingGlass.vcxproj  LookingGlass.vcxproj.filters  LookingGlassVK.h  Main.cpp  meson.build  meson_options.txt  meson_setup.bat  meson_setup.sh
Props/: CV.props  CVDebug.props  GLSL.props
Shaders/: Views.geom  glsl_clean.bat
VK/: VK.sln
VK/VK/: CV.h  GLI.h  Hailo.h  VK.cpp  VK.h  VK.vcxproj  VK.vcxproj.filters  meson.build  meson_compile.bat  meson_options.txt  meson_setup.bat  meson_setup.sh
